--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -1,28 +1,32 @@
 * {box-sizing: border-box}
-body {font-family: "Lato", sans-serif;}
+body {
+font-family:"Segoe UI",Arial,sans-serif;
+}
 
 /* Style the tab */
 div.tab {
     float: left;
     border: 1px solid #ccc; 
     background-color: #f1f1f1; 
-    width: 15%;
-    height: 100%;
+    width: 12%;
+    height: 550px;
 }
 
 /* Style the buttons inside the tab */
 div.tab button {
-    display: block;
+    display: block; 
     background-color: inherit;
     color: black;
-    padding: 22px 16px;
+    padding: 20px 10px;
     width: 100%;
-    border: none;
+    border: 1px solid #ccc;
     outline: none;
     text-align: left;
     cursor: pointer;
     transition: 0.3s;
     font-size: 17px;
+    font-family:"Segoe UI";
+    overflow: auto;
 }
 
 /* Change background color of buttons on hover */
@@ -40,7 +44,20 @@ div.tab button.active {
     float: left;
     padding: 0px 12px;
     border: 1px solid #ccc;
-    width: 70%;
-    /* border-left: none;*/
-    height: 500px;
+    width: 88%;
+    border-left: 1px solid #ccc;
+    height: 550px;
+}
+
+/* Style the log content */
+.logStatus {
+height:400px;
+width:98%;
+overflow:auto;
+background-color:#336699;
+color:white;
+scrollbar-base-color:gold;
+font-family:sans-serif;
+padding:10px;
+
 }
