--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -4,6 +4,7 @@
 
 body {
     font-family: "Segoe UI",Arial,sans-serif;
+
 }
 
 /*** Left Navigation Style ***/
@@ -23,7 +24,7 @@ div.tab {
         color: black;
         padding: 20px 10px;
         width: 100%;
-        border: 1px solid #ccc;
+        border-bottom: 1px solid #ccc;
         outline: none;
         text-align: left;
         cursor: pointer;
@@ -43,19 +44,32 @@ div.tab {
             background-color: #00ace6;
         }
 
+/* Style the tab header */
+.tabheader {
+    float: left;
+    padding: 0px 12px;
+    border-top: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    border-left: 1px solid #ccc;
+    width: 88%;
+    height: 90px;
+}
+
+
 /* Style the tab content */
 .tabcontent {
     float: left;
     padding: 0px 12px;
-    border: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    border-right: 1px solid #ccc;
     width: 88%;
     border-left: 1px solid #ccc;
-    height: 550px;
+    height: 460px;
 }
 
 /*** Log Text Box content Style ****/
 .logStatus {
-    height: 400px;
+    height: 300px;
     width: 98%;
     overflow: auto;
     background-color: #336699;
@@ -132,7 +146,9 @@ input:checked + label { /* Checked format */
 
 input:disabled + label { /* Disabled format */
     background-color: gray;
+
 }
+
 
 /*** Message Box ***/
 div.message_box {
@@ -146,4 +162,141 @@ div.message_box {
     height: 100px;
     color: #fff;
     background-color: #ffcc00;
+}
+
+/*** Button ***/
+.button_disabled {
+    background-color: gray;  /* #4CAF50; Green; gray; */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 30px;
+    margin: 4px 2px;
+    cursor: pointer;
+    width: 100%;
+    height: 75px;
+    border-radius: 100px;
+    transition: background-color .2s;
+
+    border-radius: 100px;
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, .2);
+
+    opacity: 0.6;
+    cursor: not-allowed;
+}
+
+.button_enabled {
+    background-color: cornflowerblue;  /* #4CAF50; Green; gray; */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 30px;
+    margin: 4px 2px;
+    cursor: pointer;
+    width: 100%;
+    height: 75px;
+    border-radius: 100px;
+    transition: background-color .2s;
+
+    border-radius: 100px;
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, .2);
+}
+
+.button_engaged {
+    background-color: #4CAF50;  /* #4CAF50; Green; gray; */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 30px;
+    margin: 4px 2px;
+    cursor: pointer;
+    width: 100%;
+    height: 75px;
+    border-radius: 100px;
+    transition: background-color .2s;
+
+    border-radius: 100px;
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, .2);
+}
+
+/*** MODAL ***/
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 50%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+    font-size: 17px;
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-header {
+    padding: 2px 16px;
+    background-color: #ffcc00;
+    color: black;
+}
+
+.modal-body {padding: 2px 20px;}
+
+.modal-footer {
+    padding: 10px 16px 10px 10px;
+    background-color: #ffcc00;
+    color: black;
 }
