Added the Map and markers.

--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -341,3 +341,11 @@ div.message_box {
 .col-style2b {
     width: 15%;
 }
+
+/* Map *
+ * Always set the map height explicitly to define the size of the div
+ * element that contains the map.
+ */
+#map {
+    height: 550px;
+}
