--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -21,6 +21,22 @@
 body {
     font-family: "Segoe UI",Arial,sans-serif;
 }
+footer {
+    padding: 0.3em;
+    color: white;
+    background-color: gray;
+    clear: left;
+}
+p.copyright {
+    float: right;
+    text-align: right;
+    font-size: 0.7em;
+}
+p.systemversion{
+        float: center;
+        text-align: center;
+        font-size: 0.7em;
+}
 
 /*** Left Navigation Style ***/
 /* Style the tab */
