--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -22,7 +22,7 @@ body {
     font-family: "Segoe UI",Arial,sans-serif;
 }
 footer {
-    padding: 0.3em;
+    padding: 1px 1px 1px 1px;
     color: white;
     background-color: gray;
     clear: left;
@@ -42,6 +42,38 @@ p.systemversion{
 
 /*** Left Navigation Style ***/
 /* Style the tab */
+
+div.tabindicators {
+    float: left;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+    width: 6%;
+    height: 675px;
+    padding: 5px 5px 5px 5px;
+    text-align: center;
+}
+    div.tabindicators button {
+        display: block;
+        border: none;
+        background-color: inherit;
+        color: black;
+        padding: 10px 10px;
+        width: 80%;
+        border-bottom: 1px solid #ccc;
+        outline: none;
+        text-align: left;
+        cursor: pointer;
+        transition: 0.3s;
+        font-size: 20px;
+        font-family: "Segoe UI";
+        overflow: hidden;
+    }
+
+        /* Change background color of buttons on hover */
+        div.tabindicators button:hover {
+            background-color: #ddd;
+        }
+
 div.tab {
     float: left;
     border: 1px solid #ccc;
@@ -78,6 +110,7 @@ div.tab {
             background-color: #00ace6;
         }
 
+
 /* Style the tab header */
 .tabheader {
     float: left;
@@ -85,7 +118,7 @@ div.tab {
     border-top: 1px solid #ccc;
     border-right: 1px solid #ccc;
     border-left: 1px solid #ccc;
-    width: 88%;
+    width: 82%;
     height: 100px;
 }
 
@@ -95,7 +128,7 @@ div.tab {
     padding: 0px 12px;
     border-bottom: 1px solid #ccc;
     border-right: 1px solid #ccc;
-    width: 88%;
+    width: 82%;
     border-left: 1px solid #ccc;
     height: 575px;
     overflow: auto;
