--- a/website/styles/styles.css
+++ b/website/styles/styles.css
@@ -526,6 +526,18 @@ div.message_box {
  text-align: center;
 }
 
+/* Lane */
+#divLaneTracking {
+    position: relative;
+    top: 45%;
+    width: 100%;
+    height: 200px;
+    border: 5px solid red;
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
+    justify-content: center;
+}
 
 /* Black Rounded Border Sign */
 #divSpeedCmd {
