--- a/website/styles/styles.css
+++ b/website/styles/styles.css
@@ -519,7 +519,7 @@ div.message_box {
 /* Remaining Distance to Next Speed Limit */
 #divDistRemaining{
  position: relative;
- top: 50%;
+ top: 46%;
  color: black;
  font-size: 25px;
  font-weight: bold;
@@ -529,10 +529,10 @@ div.message_box {
 /* Lane */
 #divLaneTracking {
     position: relative;
-    top: 45%;
+    top: 48%;
     width: 100%;
     height: 200px;
-    border: 5px solid red;
+    /* border: 5px solid blue; */
     font-size: 25px;
     font-weight: bold;
     text-align: center;
