Initial checkin for Widget FW changes

--- a/website/styles/styles.css
+++ b/website/styles/styles.css
@@ -225,6 +225,17 @@ input:disabled + label { /* Disabled format */
     position: relative;
     left: 0px;
 }
+
+#btnWidget
+{
+    height: 80px;
+    width: 220px;
+    background-color:#336699;
+    color: white;
+    font-size: 25px;
+    position: relative;
+    left: 0px;
+}
 /*** Message Box ***/
 div.message_box {
     display: block;
