--- a/website/widgets/route_following/widget.css
+++ b/website/widgets/route_following/widget.css
@@ -1,33 +1,22 @@
 /* Lane */
 #divLaneTracking {
-    position: relative; /*absolute: 55% */ /* relative is px */
-    top: 275px;
-    width: 100%;
-    height: 200px;
+ position: absolute;
+ top: 355px;
+ left: 100px;
     font-size: 25px;
     font-weight: bold;
-    text-align: center;
-    justify-content: center;
+    /*text-align: center;
+    justify-content: center;*/
 }
 
 /* Remaining Distance to Next Speed Limit */
 #divLaneDistRemaining {
-    position: relative;
-    top: 250px;
-    color: black;
-    font-size: 25px;
-    font-weight: bold;
-    text-align: center;
-    justify-content: center;
-}
-
-/* RouteInfo in Driver View */
-#divRouteInfo {
-    position: relative;
-    top: 0px;
-    color: black;
-    font-size: 35px;
-    font-weight: bold;
-    text-align: center;
+ position: absolute;
+ top: 450px;
+ left: 600px;
+ color: black;
+ font-variant-caps: all-small-caps;
+ font-size: 20px;
+ font-weight: bold;
 }
 
