--- a/website/utils/traffic_signal/traffic_signal.css
+++ b/website/utils/traffic_signal/traffic_signal.css
@@ -40,11 +40,43 @@
     background-color: #c0392b;
     box-shadow: 0 0 20px 5px #c0392b;
   }
+  .signal-circle.flash_red {
+    background-color: #c0392b;
+    box-shadow: 0 0 20px 5px #c0392b;
+    animation: fadeItRed 1s ease-in-out infinite;
+  }
+
   .signal-circle.yellow {
     background-color: #f1c40f;
     box-shadow: 0 0 20px 5px #f1c40f;
   }
+  .signal-circle.flash_yellow {
+    background-color: #f1c40f;
+    box-shadow: 0 0 20px 5px #f1c40f;
+    animation: fadeItYellow 1s ease-in-out infinite;
+  }
+
   .signal-circle.green {
     background-color: #2ecc71;
     box-shadow: 0 0 20px 5px #2ecc71;
+  }
+  .signal-circle.flash_green {
+    background-color: #2ecc71;
+    box-shadow: 0 0 20px 5px #2ecc71;
+    animation: fadeItGreen 1s ease-in-out infinite;
+  }
+  @keyframes fadeItYellow {
+    0%   { background-color: #f1c40f; }
+    50%  { background-color: grey; }
+    100% { background-color: #f1c40f; }
+  }
+  @keyframes fadeItRed {
+    0%   { background-color: #c0392b; }
+    50%  { background-color: grey; }
+    100% { background-color: #c0392b; }
+  }
+  @keyframes fadeItGreen {
+    0%   { background-color: #2ecc71; }
+    50%  { background-color: grey; }
+    100% { background-color: #2ecc71; }
   }
