--- a/website/styles/main.css
+++ b/website/styles/main.css
@@ -99,7 +99,7 @@ canvas
 }
 #route-list-content-no-route-available{
     color:rgb(239, 189, 39) ;
-    font-size: 80%;
+    font-size: 85%;
 }
 a:hover, a:active, a.active
 {
@@ -120,7 +120,6 @@ a.custom-nav
     position: absolute;    
     overflow-y: auto;  
     z-index: 999;  
-    
     top:70px;
 }
 .bg-black
@@ -140,13 +139,68 @@ hr{
 #maps-panel,#platoon-info-panel,#status-panel,#logs-panel,#allPlugins-panel,#activePlugins-panel,#speed-advisory-info-panel{
     border-radius: 15px;
 }
-#right-panel .card  {
+#right-panel .card {
     border-radius: 15px;
 }
 #right-panel .card .card-header{
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
 }
+/* status panel */
+#status-panel{
+    overflow: hidden;
+    height: 60%;
+}
+#status-panel .card{
+    overflow: hidden;
+    height: 100%;
+}
+#status-panel .table-responsive-sm{
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 100%;
+}
+#status-panel .table-responsive-sm::-webkit-scrollbar
+{
+    width: 5px;
+}
+#status-panel .table-responsive-sm::-webkit-scrollbar-thumb
+{
+    background-color: #fff;
+}
+#status-panel .table td, #status-panel .table th{
+    padding: 0.75em !important;
+}
+#status-panel .table-dark thead th{
+ border-top-color: black;
+}
+
+/**logs panel***/
+#logs-panel{
+    height: 60%;
+}
+#logs-panel p{
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+#logs-panel .card-body, #logs-panel .card{
+   padding-top: 0px;
+}
+#logs-panel .card{
+    height: 100%;
+ }
+ #logs-panel .log-content{
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 100%;
+}
+ #logs-panel .log-content::-webkit-scrollbar{
+    width: 5px;
+ }
+ #logs-panel .log-content::-webkit-scrollbar-thumb{
+     background-color: white;
+ }
+
 .card-custom-header{
     color:  rgb(167, 223, 57)  !important;
     background-color: #1a1a1a  !important;
@@ -180,7 +234,7 @@ hr{
 .bottom-nav-item{
     text-align: center;   
     cursor: pointer;
-    font-size: 90%;
+    font-size: 85%;
     width: fit-content;
 }
 .bottom-nav-item,.bottom-nav-item-advanced,.bottom-nav-item-logout,.bottom-nav-item-statistics
@@ -254,6 +308,7 @@ hr{
     bottom: 10px;
     left: 20px;
     border-radius: 50%;
+    z-index: 1000;
 }
 #Guidace-btn{
     margin: auto;
@@ -281,10 +336,10 @@ hr{
     color:rgb(167, 223, 57);
 }
 #allPlugins-panel .plugin-type{
-    font-size: 90%;
+    font-size: 85%;
 }
 .card-text{
-    font-size: 90%;
+    font-size: 85%;
 }
 .text-red{
     color:red;
