add control handover, update per requested changes

--- a/website/utils/current_speed/current_speed.css
+++ b/website/utils/current_speed/current_speed.css
@@ -3,7 +3,7 @@
     border-radius: 50%;
     width: 120px;
     height: 120px;
-    background-color: transparent;
+    background-color: #2C343D;
     color: white;
     margin: auto;
     display: block;
