--- a/website/utils/elapsed_time/elapsed_time.css
+++ b/website/utils/elapsed_time/elapsed_time.css
@@ -10,7 +10,7 @@
     border-left: 1px solid #C7C8D9;
     border-bottom: 1px solid #C7C8D9;
     border-right: 1px solid #C7C8D9;
-    width: 250px;
+    width: 270px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 
@@ -32,7 +32,7 @@
 
 #clockdiv div > span{
     padding: 2px 5px;
-    margin: 0px;
+    margin: 0px 10px 0px 0px;
     border-radius: 3px;
     border: 2px solid  #C7C8D9;
     display: inline-block;
