update car and widget size

--- a/website/utils/current_speed/current_speed.css
+++ b/website/utils/current_speed/current_speed.css
@@ -1,8 +1,8 @@
 .speed-green-circle{
     border: 3px solid rgb(167, 223, 57);
     border-radius: 50%;
-    width: 120px;
-    height: 120px;
+    width: 130px;
+    height: 130px;
     background-color: #2C343D;
     color: white;
     margin: auto;
@@ -10,11 +10,14 @@
     text-align: center;
 }
 .speed-green-circle .speed-text{
-    font-size: 180% !important;
+    font-size: 230% !important;
+    margin-top: 0px;
+    line-height: 1;
 }
 .speed-green-circle .speed-unit{
     font-size:10pt !important;
     font-weight: bolder;
+    margin-top: 0px;
 }
 
 .speed-green-circle .speed-type{
