--- a/website/utils/lane_change_direction/lane_chagne_direction.css
+++ b/website/utils/lane_change_direction/lane_chagne_direction.css
@@ -9,7 +9,7 @@
     font-size: 80%;
     font-weight: bolder;
     float: right;
-    padding: 20px 5px;
+    padding: 20px;
 }
 .lane-change-img{
     width: 150px; 
